# sinex

./: .cargo-machete.toml  .coderabbit.yaml  .env.example  .envrc  .gitattributes  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  .tokeignore  .zshrc.local  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TIM_COMPLETENESS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  FORGE_ANALYSIS.md  LICENSE  MULTIAGENT.md  PLAN.md  README.md  TESTING.md  bacon.toml  build.rs  clippy.toml  deny.toml  devenv.nix  docker-compose.cloud.yml  flake.nix  justfile  mprocs.yaml  optimize_domain.py  plan.md  pytest.ini  refactoring_plan.md  rust-analyzer-nix.sh  rust-analyzer.toml  rust-toolchain.toml  rustdoc_advanced_techniques.md  rustdoc_migration_analysis.md  (+26 more)
cli/sinex-cli/: Cargo.toml
cli/sinex-cli/src/: config.rs  lib.rs  validation.rs
cli/sinex-cli/tests/: auth_tests.rs  config_tests.rs  gateway_client_tests.rs  mock_client_tests.rs  property_tests.rs  retry_tests.rs
cli/sinexctl/: Cargo.toml
cli/sinexctl/src/: main.rs
cli/sinexctl/tests/: cli_integration_tests.rs  snapshot_tests.rs
crate/cli/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  config.example.toml
crate/cli/docs/: README.md
crate/cli/src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  prompt.rs  validation.rs
crate/cli/tests/: admin_snapshot_test.rs  auth_tests.rs  cli_integration_tests.rs  config_tests.rs  error_public_test.rs  fmt_json_test.rs  fmt_output_inline_test.rs  fmt_output_test.rs  fmt_progress_test.rs  fmt_yaml_test.rs  gateway_client_tests.rs  mock_client_tests.rs  property_tests.proptest-regressions  property_tests.rs  retry_tests.rs  snapshot_tests.rs  validation_test.rs
crate/sinex-analytics-automaton/: Cargo.toml
crate/sinex-analytics-automaton/src/: lib.rs  main.rs  unified_processor.rs
crate/sinex-annex/: Cargo.toml
crate/sinex-annex/src/: blob_manager.rs  health_monitor.rs  lib.rs  multi_location.rs
crate/sinex-automaton/: Cargo.toml  README.md
crate/sinex-automaton/src/: lib.rs  main.rs
crate/sinex-automaton/tests/: promotion_tests.rs  worker_integration_tests.rs
crate/sinex-channel/: Cargo.toml
crate/sinex-channel/src/: channel_enhancements.rs  channel_helpers.rs  lib.rs
crate/sinex-collector/: Cargo.toml
crate/sinex-collector/src/: agent.rs  collector.rs  config.rs  config_presets.rs  config_utils.rs  lib.rs  main.rs  metrics.rs  nixos_config.rs  observability.rs  recovery.rs  typed_collector.rs
crate/sinex-config/: Cargo.toml
crate/sinex-config/src/: duration_parser.rs  extractors.rs  figment_config.rs  helpers.rs  integration_test.rs  lib.rs  validation_framework.rs  validators.rs
crate/sinex-core/: Cargo.toml
crate/sinex-core-fs/: Cargo.toml
crate/sinex-core-fs/src/: directory_manager.rs  file_watcher.rs  lib.rs
crate/sinex-core-runtime/: Cargo.toml
crate/sinex-core-runtime/src/: channel_enhancements.rs  channel_helpers.rs  heartbeat.rs  lib.rs  pipeline.rs
crate/sinex-core-types/: Cargo.toml
crate/sinex-core-types/src/: development.rs  domain.rs  event_constants.rs  glossary.rs  ids.rs  lib.rs
crate/sinex-core-utils/: Cargo.toml
crate/sinex-core-utils/src/: chunking.rs  coordination.rs  json_helpers.rs  lib.rs  resource_guard.rs  retry_helpers.rs  retry_helpers_tokio.rs  sqlite_helpers.rs  wait_helpers.rs
crate/sinex-core/examples/: error_context_usage.rs  with_context_usage.rs
crate/sinex-core/src/: channel_enhancements.rs  channel_helpers.rs  chunking.rs  config_extractors.rs  config_helpers.rs  constants.rs  directory_manager.rs  error.rs  error_context.rs  event.rs  event_builders.rs  event_pipeline.rs  event_registry_macro.rs  (+18 more)
crate/sinex-db/: Cargo.toml
crate/sinex-desktop-satellite/: CLIPBOARD_EVENT_DRIVEN_DESIGN.md  Cargo.toml
crate/sinex-document-ingestor/: Cargo.toml
crate/sinex-error/: Cargo.toml
crate/sinex-events/: Cargo.toml  build.rs
crate/sinex-events-shell/: Cargo.toml
crate/sinex-events-terminal/: Cargo.toml
crate/sinex-fs/: Cargo.toml
crate/sinex-fs-watcher/: Cargo.toml  FILESYSTEM_MONITORING_DETAILS.md
crate/sinex-health-aggregator/: Cargo.toml
crate/sinex-heartbeat/: Cargo.toml
crate/sinex-host/: Cargo.toml
crate/sinex-identifiers/: Cargo.toml
ingestors/: Cargo.toml  README.md
ingestors/filesystem/: Cargo.toml  README.md
ingestors/hyprland/: Cargo.toml  README.md  hyprland-ingestor.service
ingestors/kitty/: Cargo.toml  README.md
ingestors/shared/: Cargo.toml
ingestors/unified/: Cargo.toml
xtask/: Cargo.toml  README.md  build.rs
xtask/cloud/: bootstrap.sh  docker-compose.yml
xtask/config/: cloud-safe-crates.toml  compatibility-witnesses.json  perf-contracts.toml  phase-verification.json
xtask/docs/: README.md  cloud-agent-lane.md  command-guide.md  command-reference.md  dependency-hygiene.md  devshell-runtime.md  runtime-target-boundaries.md  verification.md
xtask/macros/: Cargo.toml
xtask/src/: affected.rs  affected_test.rs  cache_hygiene.rs  cache_hygiene_test.rs  cargo_diagnostics.rs  cargo_diagnostics_test.rs  cargo_runner.rs  command.rs  command_catalog.rs  command_catalog_test.rs  command_docs.rs  command_docs_test.rs  command_test.rs  config.rs  config_test.rs  coordinator.rs  coordinator_test.rs  deps_test.rs  git_stack.rs  git_stack_test.rs  impact.rs  impact_test.rs  jobs_test.rs  lib.rs  lib_test.rs  main.rs  orchestrator.rs  orchestrator_test.rs  output.rs  output_test.rs  planner.rs  planner_test.rs  preflight.rs  preflight_test.rs  process.rs  process_test.rs  proof_catalog.rs  resources.rs  resources_test.rs  runtime_metrics.rs  (+14 more)
xtask/tests/: class_invariants.rs  cli_output_snapshots.rs  command_consistency.rs  command_edge_cases.rs  doctor_tests.rs  ephemeral_workspace_tests.rs  event_assertions_test.rs  history_analysis_tests.rs  history_integration.rs  json_invariant_test.rs  pool_error_tests.rs  property_tests.rs  pty_snapshot_tests.rs  scenarios.rs  strict_changed_tests.rs  support.rs  test_commands.rs  test_deps.rs  test_deps_extended.rs  test_deps_phase2.rs  test_graph.rs  test_privacy.rs  tls_library_tests.rs  tls_tests.rs  workspace_property_tests.rs
(+7806 files in other folders)
