[workspace]
members = [
  # Library crates

  "crate/lib/sinex-primitives",
  "crate/lib/sinex-schema",
  "crate/lib/sinex-macros",
  "crate/lib/sinex-node-sdk",
  "crate/lib/sinex-processor-runtime",
  "crate/lib/sinex-services",
  "crate/lib/sinex-db",
  # Re-enabled to ensure tests compile

  # Core runtime crates
  "crate/core/sinex-ingestd",
  "crate/core/sinex-gateway",

  # Ingestor crates (event sources)
  "crate/nodes/sinex-terminal-ingestor",
  "crate/nodes/sinex-desktop-ingestor",
  "crate/nodes/sinex-system-ingestor",
  "crate/nodes/sinex-fs-ingestor",
  "crate/nodes/sinex-document-ingestor",
  "tests/e2e",  # TODO: Fix e2e tests compilation errors (TestNodePublisher migration, Duration API, etc.)

  # Automaton crates (derived processors)
  "crate/nodes/sinex-terminal-command-canonicalizer",
  "crate/nodes/sinex-health-automaton",
  "crate/nodes/sinex-analytics-automaton",

  # Developer tooling
  "xtask",

  # CLI tools
  "crate/cli",

  # Test modules are integration tests within the main workspace
  # "test/*", # Removed - tests are integration tests, not separate workspace members

  # Disabled/folded crates
  # "crate/sinex-annex", # Folded into sinex-node-sdk
  # "crate/sinex-preflight", # Folded into sinex-node-sdk
  # "crate/sinex-nats", # Folded into sinex-node-sdk
]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "allow"
unused_crate_dependencies = "allow"
unexpected_cfgs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Hard denies
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# Track but don't block
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"

# Pedantic: too noisy
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"
unnecessary_wraps = "allow"
trivially_copy_pass_by_ref = "allow"
unused_async = "allow"

# Design trade-offs
result_large_err = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"
await_holding_lock = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"

# Casting
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

# CLI/debug
print_stdout = "allow"
print_stderr = "allow"
as_conversions = "allow"

# Style (human judgment)
unit_arg = "allow"
match_same_arms = "allow"
case_sensitive_file_extension_comparisons = "allow"
option_if_let_else = "allow"
format_push_string = "allow"
unused_self = "allow"
unreadable_literal = "allow"
float_cmp = "allow"
field_reassign_with_default = "allow"
manual_clamp = "allow"
significant_drop_tightening = "allow"
if_not_else = "allow"
clone_on_ref_ptr = "allow"
ref_option_ref = "allow"
used_underscore_binding = "allow"
use_debug = "allow"
duration_suboptimal_units = "allow"
let_unit_value = "allow"
declare_interior_mutable_const = "allow"
borrow_interior_mutable_const = "allow"
implicit_hasher = "allow"
default_trait_access = "allow"
missing_const_for_fn = "allow"
ignored_unit_patterns = "allow"
large_include_file = "allow"
excessive_precision = "allow"
suspicious_operation_groupings = "allow"
verbose_bit_mask = "allow"
no_effect_underscore_binding = "allow"
ref_option = "allow"
into_iter_without_iter = "allow"
missing_fields_in_debug = "allow"
if_then_some_else_none = "allow"
result_unit_err = "allow"
iter_without_into_iter = "allow"
match_wildcard_for_single_variants = "allow"
manual_non_exhaustive = "allow"
non_std_lazy_statics = "allow"
wildcard_imports = "allow"


[workspace.package]
version = "0.4.2"
edition = "2021"
authors = ["Sinex Exocortex Contributors"]
repository = "https://github.com/sinex/exocortex"
license = "MIT OR Apache-2.0"

# cargo-machete false positives (deps used in build.rs, conditional, platform-specific)
[workspace.metadata.cargo-machete]
ignored = [
    "prost",              # sinex-ingestd: build.rs
    "tonic-build",        # sinex-node-sdk: build.rs
    "sinex-test-utils",   # dev-dependencies in multiple crates
    "tracing-subscriber", # binary crates logging setup
    "xterm-query",        # sinex-terminal-ingestor: conditional
    "battery",            # sinex-system-ingestor: platform-specific
    "procfs",             # sinex-system-ingestor: platform-specific
    "systemstat",         # sinex-system-ingestor: platform-specific
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1.88"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
  "macros",
  "migrate",
  "bigdecimal",
] }
sea-query = { version = "0.32", features = ["with-time", "with-uuid", "with-json", "postgres-array"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"
color-eyre = "0.6.5"
serde_path_to_error = "0.1.17"

# Path handling
camino = { version = "1.1", features = ["serde1"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# IDs and time
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# HTTP and metrics
axum = "0.7"

# Utils
rand = "0.8"
once_cell = "1.21.3"
blake3 = "1.8.2"
crc32fast = "1.5"
glob = "0.3"
toml = "0.8"
fastrand = "2.0"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }

# Builder pattern
bon = "2.3"

# Data structures
indexmap = "2.0"
dashmap = "5.5"
governor = "0.6"

# Retry logic
tokio-retry = "0.3"
parking_lot = "0.12"

# Message bus
async-nats = "0.33"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# System integration
sd-notify = "0.4"

# Additional utilities
tokio-stream = "0.1"
futures = "0.3"
dirs = "5.0"
lazy_static = "1.5"
base64 = "0.22"

# File system watching
notify = "6.1"

# Testing
proptest = "1"
rstest = "0.18"
insta = { version = "1.34", features = ["json", "yaml", "redactions"] }
tracing-test = "0.2"

# System
gethostname = "0.4"
clap = { version = "4.5.42", features = ["derive", "env"] }
which = "5.0"

# Configuration and validation
regex = "1.11.1"
url = "2"
unicode-normalization = "0.1"
schemars = { version = "0.8", features = ["uuid1"] }
tempfile = "3.0"
jsonschema = "0.17"
validator = { version = "0.20", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "yaml", "json", "env"] }
humantime-serde = "1.1"
uncased = "0.9"

# Build-time registry
inventory = "0.3"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Database (for Atuin integration)
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Workspace-level integration tests package
[package]
name = "sinex-workspace"
version = "0.4.2"
edition = "2021"
authors = ["Sinex Exocortex Contributors"]
repository = "https://github.com/sinex/exocortex"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
time = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
jsonschema = { workspace = true }
which = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing-test = { workspace = true }
uuid = { workspace = true }
color-eyre = { workspace = true }

blake3 = { workspace = true }
once_cell = { workspace = true }
async-nats = { workspace = true }
sinex-gateway = { path = "crate/core/sinex-gateway" }
xtask = { path = "xtask", default-features = false, features = ["sandbox"] }

[dependencies]
# Test utilities and dependencies for workspace-level integration tests
sinex-node-sdk = { path = "crate/lib/sinex-node-sdk" }

# (Removed duplicate optional test deps; consolidated under dev-dependencies above)

# Speed-optimized profiles for development
[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Faster debug info handling
incremental = true
codegen-units = 16           # Balance: enough parallelism for incremental, bounded memory

[profile.dev-fast]
# Ultra-fast check-only profile (no debug info, minimal checks)
inherits = "dev"
debug = false                # Skip debug info generation
strip = true                 # Strip symbols for faster linking
