[workspace]
members = [
  # The daemon (#1054)
  "crate/sinexd",

  # Shared libraries (surviving — flat layout)
  "crate/sinex-primitives",
  "crate/sinex-macros",
  "crate/sinex-db",

  # Dying libraries (will be dissolved in PR-3, kept at original path)
  "crate/lib/sinex-node-sdk",

  # Dying service-binary hosts (folded into sinexd in PR-2/PR-3, kept at original paths)
  "crate/core/sinex-ingestd",
  "crate/core/sinex-gateway",
  "crate/core/sinex-source-worker",
  "crate/core/sinex-process",

  # CLI (surviving — flat)
  "crate/sinexctl",

  # Test crates (surviving — flat)
  "crate/sinex-e2e-tests",
  "crate/sinex-workspace-tests",
  "crate/sinex-vm-suite",

  # Developer tooling
  "xtask",
]
resolver = "2"

[workspace.lints.rust]
unreachable_pub = "allow"
unused_crate_dependencies = "allow"
unexpected_cfgs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Hard denies
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# Hard denies (safe: allow-unwrap-in-tests = true in clippy.toml)
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"

# Pedantic: too noisy
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "warn"
doc_markdown = "warn"
unnecessary_wraps = "warn"
trivially_copy_pass_by_ref = "allow"
unused_async = "warn"

# Design trade-offs
result_large_err = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"
await_holding_lock = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "warn"
struct_excessive_bools = "allow"

# Casting
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

# CLI/debug
print_stdout = "allow"
print_stderr = "allow"
as_conversions = "allow"

# Style (human judgment)
unit_arg = "allow"
match_same_arms = "allow"
case_sensitive_file_extension_comparisons = "allow"
option_if_let_else = "allow"
format_push_string = "allow"
unused_self = "allow"
unreadable_literal = "allow"
float_cmp = "allow"
field_reassign_with_default = "allow"
manual_clamp = "allow"
significant_drop_tightening = "allow"
if_not_else = "allow"
clone_on_ref_ptr = "allow"
ref_option_ref = "allow"
used_underscore_binding = "allow"
use_debug = "allow"
duration_suboptimal_units = "allow"
let_unit_value = "allow"
declare_interior_mutable_const = "allow"
borrow_interior_mutable_const = "allow"
implicit_hasher = "allow"
default_trait_access = "warn"
missing_const_for_fn = "allow"
ignored_unit_patterns = "allow"
large_include_file = "allow"
excessive_precision = "allow"
suspicious_operation_groupings = "allow"
verbose_bit_mask = "allow"
no_effect_underscore_binding = "allow"
ref_option = "allow"
into_iter_without_iter = "allow"
missing_fields_in_debug = "allow"
if_then_some_else_none = "allow"
result_unit_err = "allow"
iter_without_into_iter = "allow"
match_wildcard_for_single_variants = "allow"
manual_non_exhaustive = "allow"
wildcard_imports = "allow"


[workspace.package]
version = "0.4.2"
edition = "2024"
authors = ["Sinex Exocortex Contributors"]
repository = "https://github.com/sinex/exocortex"
license = "MIT"

[workspace.metadata.crane]
name = "sinex"

# cargo-machete false positive: binary logging setup goes through shared service helpers.
[workspace.metadata.cargo-machete]
ignored = [
    "tracing-subscriber",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1.88"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
  "macros",
  "migrate",
  "bigdecimal",
] }
sea-query = { version = "0.32", features = ["derive", "with-time", "with-uuid", "with-json", "postgres-array"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

color-eyre = "0.6.5"
serde_path_to_error = "0.1.17"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

# Path handling
camino = { version = "1.1", features = ["serde1"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
console-subscriber = "0.4"

# IDs and time

uuid = { version = "1.17.0", features = ["v4", "v5", "v7", "serde"] }
humantime = "2.1"

# HTTP and metrics
axum = "0.7"
reqwest = { version = "0.13", default-features = false }

# Utils
fastrand = "2.3"
rand = "0.9"
blake3 = "1.8.2"
crc32fast = "1.5"
glob = "0.3"
globset = "0.4"
git2 = "0.19"
toml = "0.9"
ahash = "0.8"
bytes = "1.5"
mimalloc = { version = "0.1", default-features = false }

# Builder pattern
bon = "3.9"

# Data structures
indexmap = "2.0"
dashmap = "6.1"
governor = "0.10"
petgraph = "0.8"

# Retry logic
tokio-retry = "0.3"
parking_lot = "0.12"
nix = { version = "0.29", features = [
    "fs",
    "process",
    "resource",
    "signal",
    "term",
] }

# Message bus
async-nats = "0.47"
nkeys = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# System integration
sd-notify = "0.4"

# Additional utilities
tokio-stream = "0.1"
futures = "0.3"
dirs = "5.0"
base64 = "0.22"
libc = "0.2"
walkdir = "2.5"
clap_complete = "4.5"
serde_yml = "0.0.12"
console = "0.15"
tabled = "0.20"

# File system watching
notify = "8.2"

# D-Bus (system.dbus source unit)
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"

# Testing
proptest = "1"
rstest = "0.25"
insta = { version = "1.42", features = ["json", "yaml", "redactions"] }
tracing-test = "0.2"
turmoil = "0.6"
trybuild = { version = "1.0", features = ["diff"] }

# System
gethostname = "1.1"
clap = { version = "4.5.42", features = ["derive", "env"] }
which = "8.0"
semver = { version = "1.0", features = ["serde"] }
shadow-rs = "0.35"
sysinfo = "0.38"

# Configuration and validation
regex = "1.11.1"
url = "2"
csv = "1.3"
unicode-normalization = "0.1"
schemars = { version = "1.1", features = ["uuid1"] }
tempfile = "3.0"
rcgen = "0.13"
jsonschema = "0.42"
validator = { version = "0.20", features = ["derive"] }
uncased = "0.9"

# Build-time registry
inventory = "0.3"

# Cryptography
sha2 = "0.10"

# Database (for Atuin integration)
rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }

# Speed-optimized profiles for development
[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Faster debug info handling
incremental = true
codegen-units = 16           # Balance: enough parallelism for incremental, bounded memory

[profile.dev-fast]
# Ultra-fast check-only profile (no debug info, minimal checks)
inherits = "dev"
debug = false                # Skip debug info generation
strip = true                 # Strip symbols for faster linking

[profile.test]
inherits = "dev-fast"
