[workspace]
members = [
    "shared",
    "hyprland",
    "kitty",
    "filesystem",
]
resolver = "2"

[workspace.package]
version.workspace = true
edition = "2021"
authors = ["Sinity"]
repository = "https://github.com/sinity/sinex"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
gethostname = "0.4"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
blake3 = "1.5"
directories = "5.0"