[package]
name    = "xtask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = [
    "derive",
] }
color-eyre = { workspace = true }
walkdir = "2.5"
which = "6.0"
sha2 = "0.10"

clap_complete = "4.5"
tempfile = "3.14"
serde = { workspace = true, features = [
    "derive",
] }
serde_json = { workspace = true }

rusqlite = { workspace = true }
console = "0.15"
quick-xml = "0.38"
indicatif = "0.17"
num_cpus = "1.16"
dirs = "5.0"
toml = { workspace = true }
gethostname = { workspace = true }
guppy = "0.17"
libc = "0.2"

# TLS certificate generation
rcgen       = { workspace = true }
x509-parser = "0.16"
time        = { workspace = true }

# Hot reload and orchestration
notify = { workspace = true }
notify-debouncer-mini = "0.7"
nix = { version = "0.27", features = [
    "fs",
    "signal",
    "process",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
camino = "1"
tokio = { workspace = true, features = [
    "full",
    "signal",
    "process",
] }
async-trait = { workspace = true }

# Sandbox infrastructure
async-nats = { workspace = true }
proptest = { workspace = true }

# Core types (Timestamp, etc.)
sinex-primitives = { path = "../crate/lib/sinex-primitives", default-features = false, features = ["testing"] }
sinex-schema = { path = "../crate/lib/sinex-schema" }

# Database and node SDK (for test sandbox)
sinex-db = { path = "../crate/lib/sinex-db" }
sinex-node-sdk = { path = "../crate/lib/sinex-node-sdk" }
url = { workspace = true }
rand = { workspace = true }
tokio-stream = "0.1"
uuid = { workspace = true }
bon = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
insta = { workspace = true }
blake3 = { workspace = true }

# Macros
xtask-macros = { path = "./macros" }

sysinfo = "0.38.0"

# Shell scripting (replaces ProcessBuilder)
xshell = "0.2"

# Pretty table output
tabled = "0.17"

# Better panic messages for users
human-panic = "2.0"

# Build-time metadata (git hash, build time)
shadow-rs = "0.35"

[build-dependencies]
shadow-rs = "0.35"

[dev-dependencies]

[lints]
workspace = true
