[package]
name    = "xtask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = [
    "derive",
] }
color-eyre = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
sha2 = { workspace = true }

clap_complete = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true, features = [
    "derive",
] }
serde_json = { workspace = true }
serde_yml = { workspace = true }

rusqlite = { workspace = true }
console = { workspace = true }
quick-xml = "0.38"
num_cpus = "1.16"
dirs = { workspace = true }
toml = { workspace = true }
gethostname = { workspace = true }
guppy = "0.17"
libc = { workspace = true }

# TLS certificate generation
rcgen       = { workspace = true, features = ["pem", "x509-parser"] }
x509-parser = { version = "0.16", features = ["verify"] }
time        = { workspace = true }

# Hot reload and orchestration
notify = { workspace = true }
notify-debouncer-mini = "0.7"
nix = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "rustls",
] }
camino = { workspace = true }
tokio = { workspace = true, features = [
    "full",
    "signal",
    "process",
] }
# Sandbox infrastructure
async-nats = { workspace = true }
proptest = { workspace = true }

# Core types (Timestamp, etc.)
sinex-primitives = { path = "../crate/lib/sinex-primitives", default-features = false, features = ["testing"] }
sinex-schema = { path = "../crate/lib/sinex-schema" }

# Database and node SDK (for test sandbox)
sinex-db = { path = "../crate/lib/sinex-db" }
sinex-node-sdk = { path = "../crate/lib/sinex-node-sdk" }

# Source-unit inventory links. xtask source-unit/proof tooling must see the
# descriptors declared by shipped node crates, not only descriptors hardcoded in
# sinex-primitives. Post-Wave-B fold (#1081), every per-domain source unit is
# registered from sinex-source-worker, so a single dep covers all of them.
sinex-source-worker = { path = "../crate/core/sinex-source-worker" }
sinex-process = { path = "../crate/core/sinex-process" }
url = { workspace = true }
rand = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
bon = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
insta = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }

# Macros
xtask-macros = { path = "./macros" }

sysinfo = { workspace = true }

# Shell-style command composition

# Pretty table output
tabled = { workspace = true }

# Better panic messages for users
human-panic = { workspace = true }

# Build-time metadata (git hash, build time)
shadow-rs = { workspace = true }

[build-dependencies]
blake3 = { workspace = true }
shadow-rs = { workspace = true }

[dev-dependencies]
vt100 = "0.16"

[lints]
workspace = true
