[package]
name = "sinex-cli"

[dependencies]
clap_complete       = "4"
serde_yaml          = "0.9"
comfy-table         = "7"
indicatif           = "0.17"
console             = "0.15"
time                = { workspace = true }
directories         = "5.0"
dirs                = "5.0"
rustls              = "0.22"
rustls-pemfile      = "2.1"
rustls-native-certs = "0.8"
inquire             = "0.7"
syntect             = "5.2"
atty                = "0.2"
ratatui             = "0.28"
crossterm           = "0.29"
sinex-primitives    = { path = "../../crate/lib/sinex-primitives" }

[features]
wiremock = [
]

[dev-dependencies]
wiremock    = "0.6"
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
toml        = "0.8"
serial_test = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.authors]
workspace = true

[dependencies.clap]
workspace = true
features = [
    "derive",
    "env",
]

[dependencies.tokio]
workspace = true
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[dependencies.reqwest]
version = "0.12"
features = [
    "json",
    "rustls-tls",
]

[dependencies.serde]
workspace = true
features = [
    "derive",
]

[dependencies.serde_json]
workspace = true

[dependencies.color-eyre]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.sinex-schema]
path = "../../crate/lib/sinex-schema"
features = [
    "arbitrary",
]



[dependencies.figment]
version = "0.10"
features = [
    "toml",
    "env",
]

[dependencies.tracing]
workspace = true

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.insta]
workspace = true

[dev-dependencies.xtask]
path = "../../xtask"
default-features = false
features = [
    "sandbox",
]

[dev-dependencies.xtask-macros]
path = "../../xtask-macros"

[dev-dependencies.sinex-primitives]
path = "../../crate/lib/sinex-primitives"
features = [
    "testing",
]
